[Update] Implemented StatusService
